--- a/frontend/src/locale/messages.en_US.xlf
+++ b/frontend/src/locale/messages.en_US.xlf
@@ -1317,7 +1317,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="4b137ec8bf73a47063740b75c0c40d5fd3c48015" datatype="html">
-        <source>The Mempool Open Source Project</source>
+        <source>The Dogepool Open Source Project</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/about/about.component.html</context>
           <context context-type="linenumber">12,13</context>
@@ -3868,7 +3868,7 @@
         <note priority="1" from="description">mining.rewards-per-tx</note>
       </trans-unit>
       <trans-unit id="7deec1c1520f06170e1f8e8ddfbe4532312f638f" datatype="html">
-        <source>Explore the full Dogecoin ecosystem</source>
+        <source>Your Gateway to explore Dogecoin's Blockchain</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-form.component.html</context>
           <context context-type="linenumber">4,5</context>
