--- a/frontend/src/locale/messages.zh.xlf
+++ b/frontend/src/locale/messages.zh.xlf
@@ -1439,7 +1439,7 @@
         </context-group>
       </trans-unit>
       <trans-unit id="4b137ec8bf73a47063740b75c0c40d5fd3c48015" datatype="html">
-        <source>The Mempool Open Source Project</source>
+        <source>The Dogepool Open Source Project</source>
         <target>Mempool 内存池开源项目</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/about/about.component.html</context>
@@ -4370,7 +4370,7 @@
         <note priority="1" from="description">mining.rewards-per-tx</note>
       </trans-unit>
       <trans-unit id="7deec1c1520f06170e1f8e8ddfbe4532312f638f" datatype="html">
-        <source>Explore the full Dogecoin ecosystem</source>
+        <source>Your Gateway to explore Dogecoin's Blockchain</source>
         <target>体验完整的比特币生态</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/search-form/search-form.component.html</context>
@@ -5361,8 +5361,8 @@
         <note priority="1" from="description">dashboard.ldoge-pegs-in-circulation</note>
       </trans-unit>
       <trans-unit id="8f2791f5d9656271dd6c385f5ad572716e90f4a2" datatype="html">
-        <source><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space merely provides data about the Dogecoin network.&lt;/b&gt; It cannot help you with"/>mempool.space merely provides data about the Dogecoin network.<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> It cannot help you with retrieving funds, confirming your transaction quicker, etc.</source>
-        <target><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space merely provides data about the Dogecoin network.&lt;/b&gt; It cannot help you with"/> mempool.space 仅提供有关比特币网络的数据。 <x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> 它无法帮助您取回资金、更快地确认您的交易等。</target>
+        <source><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="dogepool.space merely provides data about the Dogecoin network.&lt;/b&gt; It cannot help you with"/>dogepool.space merely provides data about the Dogecoin network.<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> It cannot help you with retrieving funds, confirming your transaction quicker, etc.</source>
+        <target><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="dogepool.space merely provides data about the Dogecoin network.&lt;/b&gt; It cannot help you with"/> dogepool.space 仅提供有关比特币网络的数据。 <x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> 它无法帮助您取回资金、更快地确认您的交易等。</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/docs/api-docs/api-docs.component.html</context>
           <context context-type="linenumber">13</context>
