--- a/frontend/src/locale/messages.ko.xlf
+++ b/frontend/src/locale/messages.ko.xlf
@@ -2221,8 +2221,8 @@
         <note priority="1" from="meaning">transaction.fee-rate</note>
       </trans-unit>
       <trans-unit id="d2eb45d1cd8cd146b7cb0223ab97a4b03b614060" datatype="html">
-        <source>koinu/vB</source>
-        <target>koinu/vB</target>
+        <source>DOGE/kb</source>
+        <target>DOGE/kb</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/block-overview-tooltip/block-overview-tooltip.component.html</context>
           <context context-type="linenumber">28</context>
@@ -2315,7 +2315,7 @@
           <context context-type="sourcefile">src/app/dashboard/dashboard.component.html</context>
           <context context-type="linenumber">213,217</context>
         </context-group>
-        <note priority="1" from="description">koinu/vB</note>
+        <note priority="1" from="description">DOGE/kb</note>
         <note priority="1" from="meaning">shared.sat-vbyte</note>
       </trans-unit>
       <trans-unit id="54c58b39481f1749fce23fa8a77f616eee84d761" datatype="html">
@@ -4347,13 +4347,13 @@
         <note priority="1" from="description">mining.average-fee</note>
       </trans-unit>
       <trans-unit id="31443c29cb161e8aa661eb5035f675746ef95b45" datatype="html">
-        <source>koinu/tx</source>
-        <target>koinu/tx</target>
+        <source>DOGE/tx</source>
+        <target>DOGE/tx</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/reward-stats/reward-stats.component.html</context>
           <context context-type="linenumber">33,36</context>
         </context-group>
-        <note priority="1" from="description">koinu/vB</note>
+        <note priority="1" from="description">DOGE/kb</note>
         <note priority="1" from="meaning">shared.sat-vbyte</note>
       </trans-unit>
       <trans-unit id="c4ae62409269c8255a390587baad3ff496889cba" datatype="html">
@@ -4460,7 +4460,7 @@
         <note priority="1" from="description">search.go-to</note>
       </trans-unit>
       <trans-unit id="75c20c8a9cd9723d45bee0230dd582d7c2e4ecbc" datatype="html">
-        <source>Mempool by vBytes (koinu/vByte)</source>
+        <source>Mempool by vBytes (DOGE/kbyte)</source>
         <target>vBytes별 멤풀 (sat.vByte)</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/statistics/statistics.component.html</context>
@@ -5277,8 +5277,8 @@
         <note priority="1" from="meaning">tx-fee-rating.optimal</note>
       </trans-unit>
       <trans-unit id="60601e02e7c1f6c4dbabd0ef0bb8946003db8dec" datatype="html">
-        <source>Only ~<x id="INTERPOLATION" equiv-text="{{ medianFeeNeeded | feeRounding }}"/> koinu/vB was needed to get into this block</source>
-        <target>이 블록에 포함되기 위해서 ~<x id="INTERPOLATION" equiv-text="{{ medianFeeNeeded | feeRounding }}"/> koinu/vB만 필요했습니다</target>
+        <source>Only ~<x id="INTERPOLATION" equiv-text="{{ medianFeeNeeded | feeRounding }}"/> DOGE/kb was needed to get into this block</source>
+        <target>이 블록에 포함되기 위해서 ~<x id="INTERPOLATION" equiv-text="{{ medianFeeNeeded | feeRounding }}"/> DOGE/kb만 필요했습니다</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/tx-fee-rating/tx-fee-rating.component.html</context>
           <context context-type="linenumber">2</context>
